# 100x-ai-writing

./: README.md  pyproject.toml
src/100x_ai_writing/part_1/: main.py
src/100x_ai_writing/part_2/: dataset.py  writing_config.py
